--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
 }
 section{
     display: flex;
-    padding-bottom: 15px;
+    padding-bottom: 100px;
 }
 .about_me{
     width: 50%;
@@ -76,4 +76,9 @@ span.hire_txt {
     text-decoration: none;
     color: white;
     font-weight: 700;
+}
+#about_dream{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
